# ScalesOS

./: .clang-format  .gitignore  CMakeLists.txt  README  README.md  aboba  build.sh  launch.sh  push.sh  qemu.sh
bootloader/: CMakeLists.txt  boot.cfg
bootloader/include/: boot.h  cfg_parser.h  config.h.in  efi_wrappers.h
bootloader/src/: cfg_parser.c  efi_wrappers.c  main.c
kernel/: CMakeLists.txt  generate_symtable.py  link.ld
kernel/include/: kernel.h  multiboot.h  multiboot2.h  types.h
kernel/include/dev/: acpi.h  cmos.h  console.h  fb.h  fpu.h  null.h  pci.h  pit.h  ps2.h  random.h  rtc.h  serial.h  speaker.h  timer.h  tty.h  vt.h
kernel/include/fs/: null.h  pipe.h  procfs.h  ramdisk.h  socket.h  tar.h  tmpfs.h  vfs.h
kernel/include/int/: idt.h  irq.h  isr.h  pic.h  syscall.h
kernel/include/mem/: dma.h  gdt.h  heap.h  memory.h  mmap.h  mmio.h  paging.h  pmm.h  shm.h
kernel/include/mod/: elf.h  modules.h  symtable.h
kernel/include/proc/: mutex.h  process.h  smp.h  spinlock.h
kernel/include/util/: asm_wrappers.h  exec.h  fd.h  log.h  panic.h  path.h  perf.h
kernel/include/video/: lfbgeneric.h
kernel/src/: CMakeLists.txt  boot.asm  kernel.c
kernel/src/dev/: CMakeLists.txt  acpi.c  cmos.c  console.c  fb.c  fpu.asm  fpu.c  null.c  pci.c  pit.c  ps2.c  random.asm  random.c  rtc.c  serial.c  speaker.c  timer.asm  timer.c  tty.c  vt.c
kernel/src/fs/: CMakeLists.txt  null.c  pipe.c  procfs.c  ramdisk.c  socket.c  tar.c  tmpfs.c  vfs.c
kernel/src/int/: CMakeLists.txt  idt.asm  idt.c  irq.asm  irq.c  isr.asm  isr.c  pic.c  syscall.asm  syscall.c
kernel/src/mem/: CMakeLists.txt  dma.c  gdt.asm  gdt.c  heap.c  memory.c  mmap.c  mmio.c  paging.asm  paging.c  pmm.c  shm.c
kernel/src/mod/: CMakeLists.txt  elf.c  modules.c  symtable.c
kernel/src/proc/: CMakeLists.txt  mutex.c  process.asm  process.c  smp.asm  smp.c
kernel/src/util/: CMakeLists.txt  asm_wrappers.c  exec.c  fd.c  libk.c  log.c  panic.c  path.c  perf.c
kernel/src/video/: CMakeLists.txt  lfbgeneric.c
libc/: CMakeLists.txt
libc/include/: ctype.h  dirent.h  errno.h  fcntl.h  math.h  pwd.h  sched.h  signal.h  stdio.h  stdlib.h  string.h  time.h  unistd.h
libc/include/scales/: env.h  memory.h  mmap.h  prctl.h  reboot.h  sched.h
libc/include/sys/: __internals.h  heap.h  ioctl.h  mman.h  mod.h  mount.h  poll.h  reboot.h  select.h  signal.h  socket.h  stat.h  syscall.h  time.h  times.h  tty.h  types.h  un.h  utsname.h  wait.h
libc/src/: CMakeLists.txt  crt0.asm  crti.asm  libc.c  tls.c  udivdi3.c  udivmoddi4.c  umoddi3.c
libc/src/ctype/: CMakeLists.txt  ctype.c  isspace.c
libc/src/dirent/: CMakeLists.txt  dirent.c
libc/src/errno/: CMakeLists.txt  errno.c
libc/src/fcntl/: CMakeLists.txt  fcntl.c
libc/src/math/: CMakeLists.txt  math.asm  math.c
libc/src/pwd/: CMakeLists.txt  pwd.c
libc/src/scales/: CMakeLists.txt  memory.c  prctl.c
libc/src/signal/: CMakeLists.txt  kill.c  raise.c  signal.c
libc/src/stdio/: CMakeLists.txt  printf.c  rm.c  stdio.c
libc/src/stdlib/: CMakeLists.txt  abort.c  abs.c  alloc.c  atexit.c  atoi.c  calloc.c  env.c  exit.c  free.c  getenv.c  malloc.c  system.c
libc/src/string/: CMakeLists.txt  memcmp.c  memcpy.c  memmove.c  memset.c  reverse.c  strcat.c  strchr.c  strchrnul.c  strcmp.c  strcpy.c  strcspn.c  strdup.c  strlen.c  strncat.c  strncmp.c  strncpy.c  strnstr.c  strstr.c  strtok.c  strtol.c
libc/src/sys/: CMakeLists.txt  heap.c  ioctl.c  mman.c  mod.c  mount.c  poll.c  reboot.c  select.c  socket.c  stat.c  syscall.asm  syscall.c  time.c  times.c  tty.c  utsname.c  waitpid.c
libc/src/time/: CMakeLists.txt  asctime.c  clock.c  ctime.c  difftime.c  localtime.c  mktime.c  strftime.c  time.c
libc/src/unistd/: CMakeLists.txt  chdir.c  clone.c  dup.c  exec.c  fork.c  fs.c  getcwd.c  getpid.c  getuid.c  mmap.c  read.c  sleep.c  usleep.c
libs/: CMakeLists.txt
libs/libauth/: CMakeLists.txt
libs/libauth/include/: auth.h
libs/libauth/src/: auth.c
libs/libcfg/: CMakeLists.txt
libs/libcfg/include/: cfg.h
libs/libcfg/src/: cfg.c
libs/libcompose/: CMakeLists.txt
libs/libcompose/include/: compose.h  events.h  render.h  request.h
libs/libcompose/src/: compose.c  events.c  render.c  request.c
libs/libfb/: CMakeLists.txt
libs/libfb/include/: fb.h  fb_colors.h
libs/libfb/src/: fb.c
libs/libinput/: CMakeLists.txt
libs/libinput/include/: kbd.h  keys.h  mouse.h
libs/libinput/src/: kbd.c  mouse.c
libs/libjpeg/: CMakeLists.txt
libs/libjpeg/include/: jpeg.h
libs/libjpeg/src/: jpeg.c
libs/libpng/: CMakeLists.txt
libs/libpng/include/: png.h
libs/libpng/src/: png.c
libs/libtga/: CMakeLists.txt
libs/libtga/include/: tga.h
libs/libtga/src/: tga.c
libs/libwidgets/: CMakeLists.txt
libs/libwidgets/include/: button.h  input.h  label.h  widget.h  win.h
libs/libwidgets/src/: button.c  input.c  label.c  widget.c  win.c
libs/pthread/: CMakeLists.txt
libs/pthread/include/: pthread.h
libs/pthread/src/: pthread.c
modules/: CMakeLists.txt
modules/ata/: CMakeLists.txt  main.c
modules/dospart/: CMakeLists.txt  main.c
modules/ext2/: CMakeLists.txt  main.c
modules/gptpart/: CMakeLists.txt  main.c
modules/qemuvideo/: CMakeLists.txt  main.c  opt.asm
modules/test/: CMakeLists.txt  aboba  main.c
types/: CMakeLists.txt
types/include/: list.h  tree.h
types/src/: CMakeLists.txt  list.c  tree.c
user/: CMakeLists.txt  cat.c  chvt.c  echo.c  getty.c  insmod.c  login.c  ls.c  mkdir.c  motd.c  mount.c  pwd.c  reboot.c  rm.c  scfetch.c  shutdown.c  sleep.c  threads.c  umount.c
user/compositor/: CMakeLists.txt
user/compositor/src/: main.c
user/getty/: CMakeLists.txt
user/getty/src/: main.c
user/init/: CMakeLists.txt
user/ld/: CMakeLists.txt  ld.c  ld_types.c  ld_types.h  link.ld  wrapper.asm
user/lockscreen/: CMakeLists.txt
user/login/: CMakeLists.txt
user/motd/: CMakeLists.txt
user/mount/: CMakeLists.txt
user/scsh/: CMakeLists.txt
user/scwm/: CMakeLists.txt
user/splash/: CMakeLists.txt
user/stty/: CMakeLists.txt
user/terminal/: CMakeLists.txt
user/umount/: CMakeLists.txt
(+55 files in other folders)
