cmake_minimum_required(VERSION 3.23)
include(ExternalProject)

project(Scales-Userspace VERSION 1.0.0)

ExternalProject_Add(
    init
    SOURCE_DIR  ${PROJECT_SOURCE_DIR}/init/
    BINARY_DIR  ${CMAKE_CURRENT_BINARY_DIR}/init/
    CMAKE_ARGS  -DCMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX} -DCMAKE_EXPORT_COMPILE_COMMANDS=ON -DCMAKE_TOOLCHAIN_FILE=${CMAKE_TOOLCHAIN_FILE}
)

ExternalProject_Add(
    getty
    SOURCE_DIR  ${PROJECT_SOURCE_DIR}/getty/
    BINARY_DIR  ${CMAKE_CURRENT_BINARY_DIR}/getty/
    CMAKE_ARGS  -DCMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX} -DCMAKE_EXPORT_COMPILE_COMMANDS=ON -DCMAKE_TOOLCHAIN_FILE=${CMAKE_TOOLCHAIN_FILE}
)

ExternalProject_Add(
    login
    SOURCE_DIR  ${PROJECT_SOURCE_DIR}/login/
    BINARY_DIR  ${CMAKE_CURRENT_BINARY_DIR}/login/
    CMAKE_ARGS  -DCMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX} -DCMAKE_EXPORT_COMPILE_COMMANDS=ON -DCMAKE_TOOLCHAIN_FILE=${CMAKE_TOOLCHAIN_FILE}
)

ExternalProject_Add(
    scsh
    SOURCE_DIR  ${PROJECT_SOURCE_DIR}/scsh/
    BINARY_DIR  ${CMAKE_CURRENT_BINARY_DIR}/scsh/
    CMAKE_ARGS  -DCMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX} -DCMAKE_EXPORT_COMPILE_COMMANDS=ON -DCMAKE_TOOLCHAIN_FILE=${CMAKE_TOOLCHAIN_FILE}
)

ExternalProject_Add(
    splash
    SOURCE_DIR  ${PROJECT_SOURCE_DIR}/splash/
    BINARY_DIR  ${CMAKE_CURRENT_BINARY_DIR}/splash/
    CMAKE_ARGS  -DCMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX} -DCMAKE_EXPORT_COMPILE_COMMANDS=ON -DCMAKE_TOOLCHAIN_FILE=${CMAKE_TOOLCHAIN_FILE}
)

ExternalProject_Add(
    mount
    SOURCE_DIR  ${PROJECT_SOURCE_DIR}/mount/
    BINARY_DIR  ${CMAKE_CURRENT_BINARY_DIR}/mount/
    CMAKE_ARGS  -DCMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX} -DCMAKE_EXPORT_COMPILE_COMMANDS=ON -DCMAKE_TOOLCHAIN_FILE=${CMAKE_TOOLCHAIN_FILE}
)

ExternalProject_Add(
    umount
    SOURCE_DIR  ${PROJECT_SOURCE_DIR}/umount/
    BINARY_DIR  ${CMAKE_CURRENT_BINARY_DIR}/umount/
    CMAKE_ARGS  -DCMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX} -DCMAKE_EXPORT_COMPILE_COMMANDS=ON -DCMAKE_TOOLCHAIN_FILE=${CMAKE_TOOLCHAIN_FILE}
)

ExternalProject_Add(
    terminal
    SOURCE_DIR  ${PROJECT_SOURCE_DIR}/terminal/
    BINARY_DIR  ${CMAKE_CURRENT_BINARY_DIR}/terminal/
    CMAKE_ARGS  -DCMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX} -DCMAKE_EXPORT_COMPILE_COMMANDS=ON -DCMAKE_TOOLCHAIN_FILE=${CMAKE_TOOLCHAIN_FILE}
)

install(CODE "MESSAGE(\"Userspace installed.\")")
